[desktop] deprecation fixes, unboxing, labmda refactors